# algorithm

./: .gitignore  AIREADME.md  CONTRIBUTING.md  CPP_COMPILATION_GUIDE.md  README.md
algorithms/data-structures/stack/: README.md
algorithms/data-structures/stack/implementations/c/: Makefile  main.c  stack.c  stack.h  test_stack.c
algorithms/data-structures/stack/implementations/cpp/: CMakeLists.txt  Makefile  stack.cpp
algorithms/data-structures/stack/implementations/java/: Stack.java  StackDemo.java
algorithms/data-structures/stack/implementations/python/: stack.py
algorithms/data-structures/stack/implementations/typescript/: stack.test.ts  stack.ts
algorithms/searching/binary-search/: README.md
algorithms/searching/binary-search/implementations/c/: Makefile  binary_search.c  binary_search.h  main.c  test_binary_search.c
algorithms/searching/binary-search/implementations/cpp/: CMakeLists.txt  Makefile  binary_search  binary_search.cpp
algorithms/searching/binary-search/implementations/java/: BinarySearchDemo.java
algorithms/searching/binary-search/implementations/javascript/: binarySearch.js
algorithms/searching/binary-search/implementations/python/: binary_search.py
algorithms/searching/binary-search/implementations/typescript/: binarySearch.test.ts  binarySearch.ts
algorithms/searching/knuth-morris-pratt/: README.md
algorithms/searching/knuth-morris-pratt/implementations/c/: Makefile  kmp_search.c  kmp_search.h  main.c  test_kmp_search.c
algorithms/searching/knuth-morris-pratt/implementations/cpp/: CMakeLists.txt  Makefile  kmp_search.cpp
algorithms/searching/knuth-morris-pratt/implementations/java/: KMPSearch.java
algorithms/searching/knuth-morris-pratt/implementations/python/: kmp_search.py
algorithms/searching/knuth-morris-pratt/implementations/typescript/: kmpSearch.test.ts  kmpSearch.ts
algorithms/sorting/bubble-sort/: README.md
algorithms/sorting/bubble-sort/implementations/c/: Makefile  README.md  bubble_sort.c  bubble_sort.h  main.c  test_bubble_sort.c
algorithms/sorting/bubble-sort/implementations/cpp/: CMakeLists.txt  Makefile  bubble_sort.cpp
algorithms/sorting/bubble-sort/implementations/java/: BubbleSort.java
algorithms/sorting/bubble-sort/implementations/javascript/: bubbleSort.js  bubbleSort.test.js  bubbleSort.test.ts
algorithms/sorting/bubble-sort/implementations/python/: bubble_sort.py  test_bubble_sort.py
algorithms/sorting/bubble-sort/implementations/typescript/: bubbleSort.ts
algorithms/templates/: README_TEMPLATE.md
